<resources>
    <string name="app_name">Calculator2Application</string>
    <string name="enter_a_number">Enter a number</string>
    <string name="enter_another_number">Enter another Number</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="modulus">%</string>
    <string name="division">/</string>
    <string name="result">Result</string>
</resources>